@@ -3193,6 +3193,18 @@ bool webkit_web_view_use_primary_for_paste(WebKitWebView* webView)
     return webView->priv->usePrimaryForPaste;
 }
 
+/**
+ * webkit_web_view_set_settings:
+ * @web_view: a #WebKitWebView
+ * @settings: (transfer none): the #WebKitWebSettings to be set
+ *
+ * Replaces the #WebKitWebSettings instance that is currently attached
+ * to @web_view with @settings. The reference held by the @web_view on
+ * the old #WebKitWebSettings instance is dropped, and the reference
+ * count of @settings is inscreased.
+ *
+ * The settings are automatically applied to @web_view.
+ */
 void webkit_web_view_set_settings(WebKitWebView* webView, WebKitWebSettings* webSettings)
 {
     g_return_if_fail(WEBKIT_IS_WEB_VIEW(webView));
@@ -3208,6 +3220,19 @@ void webkit_web_view_set_settings(WebKitWebView* webView, WebKitWebSettings* web
     g_object_notify(G_OBJECT(webView), "settings");
 }
 
+/**
+ * webkit_web_view_get_settings:
+ * @web_view: a #WebKitWebView
+ *
+ * Obtains the #WebKitWebSettings associated with the
+ * #WebKitWebView. The #WebKitWebView always has an associated
+ * instance of #WebKitWebSettings. The reference that is returned by
+ * this call is owned by the #WebKitWebView. You may need to increase
+ * its reference count if you intend to keep it alive for longer than
+ * the #WebKitWebView.
+ *
+ * Return value: (transfer none): the #WebKitWebSettings instance
+ */
 WebKitWebSettings* webkit_web_view_get_settings(WebKitWebView* webView)
 {
     g_return_val_if_fail(WEBKIT_IS_WEB_VIEW(webView), NULL);
@@ -3226,9 +3251,7 @@ WebKitWebSettings* webkit_web_view_get_settings(WebKitWebView* webView)
  * so this function will only return NULL if the argument is not a
  * valid #WebKitWebView.
  *
- * Returns: the #WebKitWebInspector instance associated with the
- * #WebKitWebView; %NULL is only returned if the argument is not a
- * valid #WebKitWebView.
+ * Return value: (transfer none): the #WebKitWebInspector instance.
  *
  * Since: 1.0.3
  */
@@ -3263,7 +3286,7 @@ static void webkit_web_view_set_window_features(WebKitWebView* webView, WebKitWe
  * Returns the instance of #WebKitWebWindowFeatures held by the given
  * #WebKitWebView.
  *
- * Return value: the #WebKitWebWindowFeatures
+ * Return value: (transfer none): the #WebKitWebWindowFeatures
  *
  * Since: 1.0.3
  */
